Chore: 신청 수락 수정, 스웨거 수정
