# src/routers/participantRouter.js
@@ -17,15 +17,10 @@ participantRouter.put('/:postId/participants', postParamsValidate, participantCo
 participantRouter.get('/:postId/userlist', postParamsValidate, participantController.getParticipants);
 
 // 신청 수락
-participantRouter.post(
-    '/:postId/:participantId/allow',
-    postParamsValidate,
-    participantParamsValidate,
-    participantController.allow,
-);
+participantRouter.post('/:participantId/allow', participantParamsValidate, participantController.allow);
 
 // 신청 거절
-participantRouter.delete('/:postId/:participantId/deny', postParamsValidate, participantParamsValidate);
+participantRouter.delete('/:participantId/deny', postParamsValidate, participantParamsValidate);
 
 // 수락된 유저 조회
 participantRouter.get('/:postId/done', postParamsValidate);
