# src/swagger/api.yaml
@@ -651,17 +651,13 @@ paths:
                 '404':
                     description: Order not found
 
-    /posts/:postId/:participantId/allow:
+    /posts/:participantId/allow:
         put:
             tags:
                 - post
             description: 신청인 수락하기
 
             parameters:
-                - name: postid
-                  in: path
-                  description: 게시글 고유 아이디
-                  required: true
                 - name: participantId
                   in: path
                   description: 참가 신청 고유 아이디
@@ -692,16 +688,16 @@ paths:
                 '404':
                     description: User not found
 
-    /posts/:postId/:participantId/deny:
+    /posts/:participantId/deny:
         put:
             tags:
                 - post
             description: 신청인 거절하기
 
             parameters:
-                - name: postid
+                - name: participantId
                   in: path
-                  description: 게시글 고유 아이디
+                  description: 참가 신청 고유 아이디
                   required: true
 
             requestbody:
@@ -722,20 +718,8 @@ paths:
                             schema:
                                 type: object
                                 properties:
-                                    post_id:
-                                        type: integer
-                                    participant_id:
-                                        type: integer
-                                    user_id:
-                                        type: integer
-                                    content:
+                                    message:
                                         type: string
-                                    canceled:
-                                        type: false
-                                    status:
-                                        type: string
-                                    createcAt:
-                                        type: datetime
                 '400':
                     description: Invalid ID supplied
                 '404':
